fix button spacing on user#show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,12 @@ body {
 
 .user_studios {
     padding: 10px 5px;
+    min-width: 100%
 }
 
-.u_studio_width {
-    min-width: 500px;
-}
+// .u_studio_width {
+//     min-width: 500px;
+// }
 
 #nav {
     background-color: rgb(255, 105, 79);
